less/splash.less
.splash {
    width: 100%;
    height: 92vh;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: @white;
    
    &__inner {
        height: 100%;
    }
    
    &__main {
        width: 100%;
        height: 100%;
        position: relative;

        img {
            object-fit: cover;
            object-position: left;
            width: 100%;
            height: 100%;            
        }

        .splash__image_large {
            display: block;

            @media (max-width: 823px) {
                display: none;
            }
        }

        .splash__image_small {
            display: none;

            @media (max-width: 823px) and (orientation: landscape) {
                display: block;
            }
        }

        .splash__image_portrait {
            display: none;

            @media (orientation: portrait) {
                display: block;
            }

            @media (max-width: @device-width-small) and (orientation: portrait) {
                display: none;
            }
        }

        .splash__image_mobile {
            display: none;
            
            @media (max-width: @device-width-small) and (orientation: portrait) {
                display: block;
            }
        }

    }

    &__main-title {
        position: absolute;
        top:10%;
        left: 7%;

        @media (max-width: @device-width-medium) and (orientation: landscape) {
            left: 6.5%;
        }
        @media (max-width: @device-width-medium) and (orientation: portrait) {
            left: 5%;
        }

        @media (max-width: @device-width-small) and (orientation: landscape) {
            left: 5.5%;
        }
        @media (max-width: @device-width-small) and (orientation: portrait) {
            left: 5%;
        }
    }

    &__button {
        position: absolute;
        top: 60%;
        left: 7%;

        @media (max-width: @device-width-medium) and (orientation: landscape) {
            left: 6.5%;
        }
        @media (max-width: @device-width-medium) and (orientation: portrait) {
            left: 5%;
        }

        @media (max-width: @device-width-small) and (orientation: landscape) {
            left: 5.5%;
        }
        @media (max-width: @device-width-small) and (orientation: portrait) {
            left: 5%;
        }

        
        .splash__start-btn {
            
        }

    }
}

